<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.6</version>
    </parent>
    <groupId>no.idporten.eudiw</groupId>
    <artifactId>eudiw-credential-registry</artifactId>
    <version>DEV-SNAPSHOT</version>
    <name>eudiw-credential-registry</name>
    <description>EUDIW credential-registry</description>
    <properties>
        <java.version>25</java.version>
        <idporten-actuator-starter.version>3.1.1</idporten-actuator-starter.version>
        <idporten-access-log.version>4.0.1</idporten-access-log.version>
        <opentelemetry-api.version>1.63.0</opentelemetry-api.version>
        <springdoc.version>3.0.3</springdoc.version>
        <surefire.plugin.version>3.5.3</surefire.plugin.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${springdoc.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-registry-prometheus</artifactId>
        </dependency>
        <dependency>
            <groupId>no.idporten.metrics</groupId>
            <artifactId>idporten-metric-constants-lib</artifactId>
            <version>1.4.5</version>
        </dependency>
        <dependency>
            <groupId>no.idporten.actuator</groupId>
            <artifactId>idporten-actuator-4-starter</artifactId>
            <version>${idporten-actuator-starter.version}</version>
        </dependency>
        <dependency>
            <groupId>no.idporten.logging</groupId>
            <artifactId>idporten-access-log-spring-boot-4-starter</artifactId>
            <version>${idporten-access-log.version}</version>
        </dependency>
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-api</artifactId>
            <version>${opentelemetry-api.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>build-info</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>
    <repositories>
        <repository>
            <id>github</id>
            <name>GitHub felleslosninger Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/felleslosninger/.github</url>
        </repository>
    </repositories>
</project>
